prosumer-1 and lineup update (now everything works)